--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     }
   ],
   "dependencies": {
+    "@kaltura-ng/dev-workspace": "^1.0.5",
     "@kaltura-ng/kaltura-primeng-ui": "^0.2.0",
     "@kaltura-ng/kaltura-ui": "^0.2.0",
     "normalize.css": "^7.0.0",
@@ -24,6 +25,7 @@
     "publishDirectory": "dist"
   },
   "scripts": {
+    "kws": "kws",
     "release": "standard-version",
     "build": "node ./scripts/build.js"
   },
@@ -48,10 +50,10 @@
     "yarn": ">= 0.24.6"
   },
   "devDependencies": {
-    "standard-version": "^4.2.0",
     "find-root": "^1.1.0",
     "read-json-file": "^1.0.1",
     "shelljs": "^0.7.8",
+    "standard-version": "^4.2.0",
     "write-json-file": "^2.2.0"
   }
 }
