--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "dependencies": {
     "@kaltura-ng/dev-workspace": "^2.0.2",
-    "@kaltura-ng/kaltura-primeng-ui": "^0.2.0",
-    "@kaltura-ng/kaltura-ui": "^0.2.0",
+    "@kaltura-ng/kaltura-primeng-ui": "0.x",
+    "@kaltura-ng/kaltura-ui": "1.x",
     "normalize.css": "^7.0.0",
     "primeng": "^4.1.0"
   },
