--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "homepage": "https://github.com/kaltura/kaltura-ng-mc-theme#readme",
   "engines": {
     "node": ">= 7.0.0",
-    "yarn": ">= 0.24.6"
+    "npm": ">= 5.0.0"
   },
   "devDependencies": {
     "find-root": "^1.1.0",
